<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3444545"
    tools:context=".activity.CalculatorActivity">


    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#F3E5E8E8"
        android:textSize="25sp"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F3939595"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/acBtn"
                style="@style/operatorBtn"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteBtn"
                style="@style/operatorBtn"
                app:icon="@drawable/ic_baseline_backspace_24"
                app:iconTint="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percentBtn"
                style="@style/operatorBtn"
                android:text="@string/percent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divideBtn"
                style="@style/operatorBtn"
                android:text="@string/divide"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/oneBtn"
                style="@style/digitBtn"
                android:text="@string/one"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/twoBtn"
                style="@style/digitBtn"
                android:text="@string/two"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/threeBtn"
                style="@style/digitBtn"
                android:text="@string/three"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mulBtn"
                style="@style/operatorBtn"
                android:text="@string/mul"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fourBtn"
                style="@style/digitBtn"
                android:text="@string/four"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fiveBtn"
                style="@style/digitBtn"
                android:text="@string/five"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sixBtn"
                style="@style/digitBtn"
                android:text="@string/six"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addBtn"
                style="@style/operatorBtn"
                android:text="@string/add"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sevenBtn"
                style="@style/digitBtn"
                android:text="@string/seven"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eightBtn"
                style="@style/digitBtn"
                android:text="@string/eight"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nineBtn"
                style="@style/digitBtn"
                android:text="@string/nine"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/subBtn"
                style="@style/operatorBtn"
                android:text="@string/sub"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cBtn"
                style="@style/operatorBtn"
                android:text="@string/c"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zeroBtn"
                style="@style/digitBtn"
                android:text="@string/zero"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dotBtn"
                style="@style/digitBtn"
                android:text="@string/dot"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equalBtn"
                style="@style/equalBtn"
                android:text="@string/equal"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>