<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="#6EB3F6">


    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="320dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#64DD17"
        android:layout_marginTop="280dp"
        android:text="Multiple Screen"
        android:textAlignment="center"
        android:padding="5dp"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/figma"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#379768"
        android:padding="10dp"
        android:text="@string/figma"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:shapeAppearance="@style/Rounded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/list"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#AFB42B"
        android:padding="10dp"
        android:text="List     View"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:shapeAppearance="@style/Rounded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calcy"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E64A19"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/cal"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/figma"
        app:layout_constraintTop_toBottomOf="@+id/figma"
        app:shapeAppearance="@style/Rounded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recycle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#7B1FA2"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/recycle"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/list"
        app:layout_constraintTop_toBottomOf="@+id/list"
        app:shapeAppearance="@style/Rounded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9E80"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/calcy"
        app:layout_constraintTop_toBottomOf="@+id/calcy"
        app:shapeAppearance="@style/Rounded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/IntentFunction"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F57C00"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/intent"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/recycle"
        app:layout_constraintTop_toBottomOf="@+id/recycle"
        app:shapeAppearance="@style/Rounded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alertDialog"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFD600"
        android:padding="10dp"
        android:text="Alert Dialog"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
        app:shapeAppearance="@style/Rounded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clickPic"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E8175E"
        android:padding="10dp"
        android:text="Picture Click"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/IntentFunction"
        app:layout_constraintStart_toStartOf="@+id/IntentFunction"
        app:layout_constraintTop_toBottomOf="@+id/IntentFunction"
        app:shapeAppearance="@style/Rounded"/>

    <TextView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#64DD17"
        android:layout_marginTop="10dp"
        android:text="Multiple Screen"
        android:textAlignment="center"
        android:padding="5dp"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertDialog" />



</androidx.constraintlayout.widget.ConstraintLayout>